--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ click-repl==0.1.6
 colorama==0.4.3
 dj-database-url==0.5.0
 Django==3.1
+django_celery_beat==2.0.0
 django-extensions==3.0.5
 django-mathfilters==1.0.0
 django-timezone-field==4.0
