--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,10 @@ click-repl==0.1.6
 colorama==0.4.3
 dj-database-url==0.5.0
 Django==3.1
-django_celery_beat==2.0.0
+django-celery-beat==2.0.0
 django-extensions==3.0.5
 django-mathfilters==1.0.0
+django-paypal==1.0.0
 django-timezone-field==4.0
 geoip2==4.1.0
 gunicorn==20.0.4
@@ -27,6 +28,10 @@ kombu==4.6.11
 maxminddb==2.0.2
 more-itertools==8.4.0
 multidict==4.7.6
+mysql==0.0.2
+mysql-client==0.0.1
+mysql-connector-python==8.0.21
+mysqlclient==1.4.6
 packaging==20.4
 Pillow==7.2.0
 pluggy==0.13.1
