Set up cloudinary for image uploads through Heroku

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,12 @@ chardet==3.0.4
 click==7.1.2
 click-didyoumean==0.0.3
 click-repl==0.1.6
+cloudinary==1.23.0
 colorama==0.4.3
 dj-database-url==0.5.0
 Django==3.1
 django-celery-beat==2.0.0
+django-cloudinary-storage==0.3.0
 django-extensions==3.0.5
 django-mathfilters==1.0.0
 django-paypal==1.0.0
